@@ -1,8 +1,9 @@
 package com.ticketseller.application;
 
-import com.ticketseller.domain.exception.RecintoNotFoundException;
-import com.ticketseller.domain.model.Recinto;
-import com.ticketseller.domain.model.Zona;
+import com.ticketseller.application.recinto.ConsultarEstructuraRecintoUseCase;
+import com.ticketseller.domain.exception.recinto.RecintoNotFoundException;
+import com.ticketseller.domain.model.recinto.Recinto;
+import com.ticketseller.domain.model.zona.Zona;
 import com.ticketseller.domain.repository.RecintoRepositoryPort;
 import com.ticketseller.domain.repository.ZonaRepositoryPort;
 import org.junit.jupiter.api.BeforeEach;
@@ -43,10 +44,10 @@ class ConsultarEstructuraRecintoUseCaseTest {
         when(zonaRepositoryPort.buscarPorRecintoId(recintoId)).thenReturn(Flux.just(zona));
 
         StepVerifier.create(useCase.ejecutar(recintoId))
-                .expectNextMatches(response -> 
-                        response.recintoId().equals(recintoId) &&
-                        response.bloques().size() == 1 &&
-                        response.bloques().get(0).nombre().equals("Zona A")
+                .expectNextMatches(tuple ->
+                        tuple.getT1().getId().equals(recintoId)
+                                && tuple.getT2().size() == 1
+                                && tuple.getT2().getFirst().getNombre().equals("Zona A")
                 )
                 .verifyComplete();
     }
